[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://Scenes/HUD/RocketPowerBar/RocketPowerBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/HUD/TicketCounter/TicketIcon.png" type="Texture" id=3]
[ext_resource path="res://Scenes/HUD/TicketCounter/TicketCounter.tscn" type="PackedScene" id=4]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RocketBarContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_right = 332.0
margin_bottom = 32.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RocketPowerBar" parent="RocketBarContainer" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 8.0
margin_right = 325.0
margin_bottom = 24.0

[node name="TicketCounterContainer" type="HBoxContainer" parent="."]
margin_left = 39.0
margin_top = 8.0
margin_right = 61.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TicketCounter" parent="TicketCounterContainer" instance=ExtResource( 4 )]
anchor_top = 0.0833333
anchor_bottom = 0.0833333
margin_left = 0.0
margin_right = 18.0
margin_bottom = 12.0

[node name="Sprite" type="Sprite" parent="TicketCounterContainer"]
position = Vector2( -18, 6 )
texture = ExtResource( 3 )
